[feture] created header component

--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,9 +1,10 @@
-<p>home works!</p>
-
-<form #f="ngForm" novalidate (ngSubmit)="onSubmit(f)">
-    <mat-form-field appearance="legacy">
-        <mat-label>Search github profile</mat-label>
-        <input matInput name="githubUserForm" ngModel #githubUserForm="ngModel" placeholder="digite seu usuário git">
-        <mat-icon (click)="onSubmit(f)" matSuffix>search</mat-icon>
-    </mat-form-field>
-</form>
+<div class="home">
+    <app-header></app-header>
+    <form #f="ngForm" novalidate (ngSubmit)="onSubmit(f)">
+        <mat-form-field appearance="legacy">
+            <mat-label>Search github profile</mat-label>
+            <input matInput name="githubUserForm" ngModel #githubUserForm="ngModel" placeholder="digite seu usuário git">
+            <mat-icon (click)="onSubmit(f)" matSuffix>search</mat-icon>
+        </mat-form-field>
+    </form>
+</div>
