--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,10 +1,25 @@
 <div class="home">
     <app-header></app-header>
-    <form #f="ngForm" novalidate (ngSubmit)="onSubmit(f)">
-        <mat-form-field appearance="legacy">
-            <mat-label>Search github profile</mat-label>
-            <input matInput name="githubUserForm" ngModel #githubUserForm="ngModel" placeholder="digite seu usuário git">
-            <mat-icon (click)="onSubmit(f)" matSuffix>search</mat-icon>
-        </mat-form-field>
-    </form>
+    <div class="container">
+        <form #f="ngForm" novalidate (ngSubmit)="onSubmit(f)">
+            <mat-form-field appearance="legacy">
+                <mat-label>Search github profile</mat-label>
+                <input matInput name="githubUserForm" ngModel #githubUserForm="ngModel"
+                    placeholder="digite seu usuário git">
+                <mat-icon (click)="onSubmit(f)" matSuffix>search</mat-icon>
+            </mat-form-field>
+        </form>
+        <div *ngIf="userInfo.name">
+            <img src={{userInfo.avatar_url}}>
+            <p class="info-title"><span>Github User Infos: </span></p>
+            <p class="info"><span>Name: </span>{{userInfo.name}}</p>
+            <p class="info"><span>Company: </span>{{userInfo.company}}</p>
+            <p class="info" *ngIf="userInfo.location"><span>Location: </span>{{userInfo.location}}</p>
+            <p class="info" *ngIf="userInfo.blog"><span>Blog: </span><a href={{userInfo.blog}} target="_blank">{{userInfo.blog}}</a></p>
+            <p class="info" *ngIf="userInfo.bio"><span>Bio: </span>{{userInfo.bio}}</p>
+            <p class="info"><span>Followers: </span>{{userInfo.followers}}</p>
+            <p class="info"><span>Following: </span>{{userInfo.following}}</p>
+            <p class="info"><span>Last update: </span>{{convertDateToLocaleString(userInfo.updated_at)}}</p>
+        </div>
+    </div>
 </div>
