--- a/src/app/componentes/home/home.component.sass
+++ b/src/app/componentes/home/home.component.sass
@@ -27,3 +27,8 @@ img
     a 
         text-decoration: none
         color: $grey_color
+
+.container-buttons
+    display: flex
+    justify-content: space-around
+    margin: 30px 0
