[styles] ajust responsiveness at home component

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,4 +1,6 @@
 <div class="header">
-    <app-github-svg></app-github-svg>
+    <a href="/">
+        <app-github-svg></app-github-svg>
+    </a>
     <p>Welcome to ShowGithubUser App!</p>
 </div>
