--- a/src/app/componentes/header/header.component.sass
+++ b/src/app/componentes/header/header.component.sass
@@ -2,16 +2,19 @@
 @import '../../../style/styles'
 
 .header
+    font-size: 1.5em
     display: flex
-    justify-content: space-between
+    justify-content: space-around
     align-items: center
     background-color: $secondary_color
     color: $primary_color
     padding: 15px
     text-align: center
     @media (min-width: $tablet_size)
-        font-size: 1.5em
+        font-size: 1.8em
         justify-content: left
+        a
+            padding-left: 20px
         p 
             padding-left: 30px
 
