--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -4,8 +4,7 @@
         <form #f="ngForm" novalidate (ngSubmit)="onSubmit(f)">
             <mat-form-field appearance="legacy">
                 <mat-label>Search github profile</mat-label>
-                <input matInput name="githubUserForm" ngModel #githubUserForm="ngModel"
-                    placeholder="">
+                <input matInput name="githubUserForm" ngModel #githubUserForm="ngModel" placeholder="">
                 <mat-icon (click)="onSubmit(f)" matSuffix>search</mat-icon>
             </mat-form-field>
         </form>
@@ -29,8 +28,10 @@
             </mat-card>
         </div>
         <div class="container-buttons">
-            <button (click)="getUserRepos()" disabled={{!userInfo.name}} mat-raised-button color="primary">{{userReposButtonText}}</button>
-            <button (click)="getUserReposStarred()" disabled={{!userInfo.name}} mat-raised-button color="primary">{{userReposStarredText}}</button>
+            <button (click)="getUserRepos()" disabled={{!userInfo.name}} mat-raised-button
+                color="primary">{{userReposButtonText}}</button>
+            <button (click)="getUserReposStarred()" disabled={{!userInfo.name}} mat-raised-button
+                color="primary">{{userReposStarredText}}</button>
         </div>
         <div class="container-repos">
             <div>
