[feature] implement chart component at home

--- a/src/app/componentes/chart/chart.component.html
+++ b/src/app/componentes/chart/chart.component.html
@@ -1,8 +1,8 @@
 <div class="chart">
     <span class="progress-chart">
-        <span label="TypeScript 94.3" style="width: 94.3%;" class="progress-chart-item"></span>
-        <span aria-label="JavaScript 4.1" style="width: 4.1%;" class="progress-chart-item"></span>
-        <span aria-label="HTML 1.6" style="width: 1.6%;" class="progress-chart-item"></span>
+        <span [ngStyle]="{'width': percentage1}" class="progress-chart-item"></span>
+        <span [ngStyle]="{'width': percentage2}" class="progress-chart-item"></span>
+        <span [ngStyle]="{'width': percentage3}" class="progress-chart-item"></span>
     </span>
     <ul>
         <li>
