--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="home">
+  <app-loading-spinner *ngIf="loadingService.isLoading | async"></app-loading-spinner>
   <router-outlet></router-outlet>
 </div>
