--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,86 +11,91 @@
         <div *ngIf="userNotFound">
             <p class="info-title"><span>User not found! 🙁 </span></p>
         </div>
-        <div *ngIf="userInfo.login">
-            <mat-card class="user-info-card">
-                <img src={{userInfo.avatar_url}}>
+        <div *ngIf="!userNotFound">
+            <div *ngIf="userInfo.login">
+                <mat-card class="user-info-card">
+                    <img src={{userInfo.avatar_url}}>
+                    <div>
+                        <p class="info-title"><span>Github User Infos: </span></p>
+                        <p class="info"><span>Name: </span>{{userInfo.name}}</p>
+                        <p class="info"><span>Company: </span>{{userInfo.company}}</p>
+                        <p class="info" *ngIf="userInfo.location"><span>Location: </span>{{userInfo.location}}</p>
+                        <p class="info" *ngIf="userInfo.blog">
+                            <span>Blog: </span>
+                            <a href={{userInfo.blog}} target="_blank">{{userInfo.blog}}</a>
+                        </p>
+                        <p class="info" *ngIf="userInfo.bio"><span>Bio: </span>{{userInfo.bio}}</p>
+                        <p class="info"><span>Followers: </span>{{userInfo.followers}}</p>
+                        <p class="info"><span>Following: </span>{{userInfo.following}}</p>
+                        <p class="info"><span>Last update: </span>{{convertDateToLocaleString(userInfo.updated_at)}}</p>
+                        <br>
+                        <a href={{userInfo.html_url}} target="_blank">
+                            <button mat-raised-button color="primary">Go to the Repo!</button></a>
+                    </div>
+                </mat-card>
+            </div>
+            <div *ngIf="userInfo.login" class="container-buttons">
+                <button (click)="getUserRepos()" mat-raised-button color="primary">{{userReposButtonText}}</button>
+                <button (click)="getUserReposStarred()" mat-raised-button
+                    color="primary">{{userReposStarredText}}</button>
+            </div>
+            <div class="container-repos">
                 <div>
-                    <p class="info-title"><span>Github User Infos: </span></p>
-                    <p class="info"><span>Name: </span>{{userInfo.name}}</p>
-                    <p class="info"><span>Company: </span>{{userInfo.company}}</p>
-                    <p class="info" *ngIf="userInfo.location"><span>Location: </span>{{userInfo.location}}</p>
-                    <p class="info" *ngIf="userInfo.blog">
-                        <span>Blog: </span>
-                        <a href={{userInfo.blog}} target="_blank">{{userInfo.blog}}</a>
-                    </p>
-                    <p class="info" *ngIf="userInfo.bio"><span>Bio: </span>{{userInfo.bio}}</p>
-                    <p class="info"><span>Followers: </span>{{userInfo.followers}}</p>
-                    <p class="info"><span>Following: </span>{{userInfo.following}}</p>
-                    <p class="info"><span>Last update: </span>{{convertDateToLocaleString(userInfo.updated_at)}}</p>
-                    <br>
-                    <a href={{userInfo.html_url}} target="_blank">
-                        <button mat-raised-button color="primary">Go to the Repo!</button></a>
-                </div>
-            </mat-card>
-        </div>
-        <div *ngIf="userInfo.login" class="container-buttons">
-            <button (click)="getUserRepos()" mat-raised-button color="primary">{{userReposButtonText}}</button>
-            <button (click)="getUserReposStarred()" mat-raised-button color="primary">{{userReposStarredText}}</button>
-        </div>
-        <div class="container-repos">
-            <div>
-                <div *ngIf="showUserRepos">
-                    <div *ngIf="repos.length !== 0; else elseBlock">
-                        <p class="info-title"><span>Github User Repos: </span></p>
-                        <div *ngFor="let repo of repos, let i = index">
-                            <mat-card>
-                                <p class="info"><span>Name: </span>{{repo.name}}</p>
-                                <p class="info" *ngIf="repo.description"><span>Description: </span>{{repo.description}}
-                                </p>
-                                <p class="info" *ngIf="repo.language"><span>Language: </span>{{repo.language}}</p>
-                                <p class="info"><span>Created at: </span>{{convertDateToLocaleString(repo.created_at)}}
-                                </p>
-                                <p class="info"><span>Pushed at: </span>{{convertDateToLocaleString(repo.pushed_at)}}
-                                </p>
-                                <br>
-                                <app-chart *ngIf="showChartData[i]" [language1]="chartData[i].language1"
-                                    [language2]="chartData[i].language2" [language3]="chartData[i].language3"
-                                    [percentage1]="chartData[i].percentage1" [percentage2]="chartData[i].percentage2"
-                                    [percentage3]="chartData[i].percentage3">
-                                </app-chart>
-                            </mat-card>
+                    <div *ngIf="showUserRepos">
+                        <div *ngIf="repos.length !== 0; else elseBlock">
+                            <p class="info-title"><span>Github User Repos: </span></p>
+                            <div *ngFor="let repo of repos, let i = index">
+                                <mat-card>
+                                    <p class="info"><span>Name: </span>{{repo.name}}</p>
+                                    <p class="info" *ngIf="repo.description"><span>Description:
+                                        </span>{{repo.description}}
+                                    </p>
+                                    <p class="info" *ngIf="repo.language"><span>Language: </span>{{repo.language}}</p>
+                                    <p class="info"><span>Created at:
+                                        </span>{{convertDateToLocaleString(repo.created_at)}}
+                                    </p>
+                                    <p class="info"><span>Pushed at:
+                                        </span>{{convertDateToLocaleString(repo.pushed_at)}}
+                                    </p>
+                                    <br>
+                                    <app-chart *ngIf="showChartData[i]" [language1]="chartData[i].language1"
+                                        [language2]="chartData[i].language2" [language3]="chartData[i].language3"
+                                        [percentage1]="chartData[i].percentage1"
+                                        [percentage2]="chartData[i].percentage2"
+                                        [percentage3]="chartData[i].percentage3">
+                                    </app-chart>
+                                </mat-card>
+                            </div>
                         </div>
+                        <ng-template #elseBlock>
+                            <p class="info-title"><span>User don't have any repo 🙁</span></p>
+                        </ng-template>
                     </div>
-                    <ng-template #elseBlock>
-                        <p class="info-title"><span>User don't have any repo 🙁</span></p>
-                    </ng-template>
+                </div>
+
+                <div>
+                    <div *ngIf="showUserReposStarred">
+                        <div *ngIf="reposStarred.length !== 0; else elseBlock">
+                            <p class="info-title"><span>Github Starred ⭐</span></p>
+                            <div *ngFor="let repoStarred of reposStarred">
+                                <mat-card>
+                                    <p class="info"><span>Name: </span>{{repoStarred.name}}</p>
+                                    <p class="info"><span>Description: </span>{{repoStarred.description}}</p>
+                                    <p class="info"><span>Language: </span>{{repoStarred.language}}</p>
+                                    <p class="info"><span>Pushed At:
+                                        </span>{{convertDateToLocaleString(repoStarred.pushed_at)}}</p>
+                                    <p class="info"><span>Updated At:
+                                        </span>{{convertDateToLocaleString(repoStarred.updated_at)}}
+                                    </p>
+                                </mat-card>
+                            </div>
+                        </div>
+                        <ng-template #elseBlock>
+                            <p class="info-title"><span>User don't have any repo Starred 🙁</span></p>
+                        </ng-template>
+                    </div>
                 </div>
             </div>
-
-            <div>
-                <div *ngIf="showUserReposStarred">
-                    <div *ngIf="reposStarred.length !== 0; else elseBlock">
-                        <p class="info-title"><span>Github Starred ⭐</span></p>
-                        <div *ngFor="let repoStarred of reposStarred">
-                            <mat-card>
-                                <p class="info"><span>Name: </span>{{repoStarred.name}}</p>
-                                <p class="info"><span>Description: </span>{{repoStarred.description}}</p>
-                                <p class="info"><span>Language: </span>{{repoStarred.language}}</p>
-                                <p class="info"><span>Pushed At:
-                                    </span>{{convertDateToLocaleString(repoStarred.pushed_at)}}</p>
-                                <p class="info"><span>Updated At:
-                                    </span>{{convertDateToLocaleString(repoStarred.updated_at)}}
-                                </p>
-                            </mat-card>
-                        </div>
-                    </div>
-                    <ng-template #elseBlock>
-                        <p class="info-title"><span>User don't have any repo Starred 🙁</span></p>
-                    </ng-template>
-                </div>
-            </div>
-
         </div>
-
     </div>
 </div>
